--- a/openstack/Controller/configs/cinder.conf
+++ b/openstack/Controller/configs/cinder.conf
@@ -41,8 +41,8 @@ lock_path = /var/lib/cinder/tmp
 volume_driver=cinder.volume.drivers.emc.scaleio.ScaleIODriver
 volume_backend_name=scaleio
 san_ip = ubuntu1
-sio_protection_domain_name = default
-sio_storage_pool_name = defaultSP
-sio_storage_pools = default:defaultSP
+sio_protection_domain_name = ScaleIO@labbuildr
+sio_storage_pool_name = SP_labbuildr
+sio_storage_pools = ScaleIO@labbuildr:SP_labbuildr
 san_login = admin
 san_password = Password123!
