--- a/openstack/Controller/configs/cinder.conf
+++ b/openstack/Controller/configs/cinder.conf
@@ -46,3 +46,4 @@ sio_storage_pool_name = SP_labbuildr
 sio_storage_pools = ScaleIO@labbuildr:SP_labbuildr
 san_login = admin
 san_password = Password123!
+san_thin_provision = true
