--- a/openstack/Controller/configs/cinder.conf
+++ b/openstack/Controller/configs/cinder.conf
@@ -15,6 +15,7 @@ my_ip = 192.168.2.201
 verbose = True
 
 enabled_backends=scaleio	
+default_volume_type=thin
 
 [database]
 connection = mysql+pymysql://cinder:Password123!@ubuntu1/cinder
