--- a/openstack/liberty/Controller/configs/dhcp_agent.ini
+++ b/openstack/liberty/Controller/configs/dhcp_agent.ini
@@ -71,7 +71,7 @@ enable_isolated_metadata = False
 
 # Domain to use for building the hostnames. This option will be deprecated in
 # a future release. It is being replaced by dns_domain in neutron.conf
-dhcp_domain = labbuildr.local
+# dhcp_domain = openstacklocal
 
 # Override the default dnsmasq settings with this file
 dnsmasq_config_file = /etc/neutron/dnsmasq-neutron.conf
