--- a/openstack/liberty/Controller/configs/glance-api.conf
+++ b/openstack/liberty/Controller/configs/glance-api.conf
@@ -963,7 +963,7 @@ filesystem_store_datadir = /var/lib/glance/images/
 # Supported values for the 'container_format' image attribute (list
 # value)
 # Deprecated group/name - [DEFAULT]/container_formats
-container_formats = ami,ari,aki,bare,ovf,ova,docker
+#container_formats = ami,ari,aki,bare,ovf,ova
 
 # Supported values for the 'disk_format' image attribute (list value)
 # Deprecated group/name - [DEFAULT]/disk_formats
