added unity support in openstack

--- a/openstack/liberty/Controller/configs/cinder.conf
+++ b/openstack/liberty/Controller/configs/cinder.conf
@@ -14,8 +14,8 @@ auth_strategy = keystone
 my_ip = 192.168.2.201
 verbose = True
 
-enabled_backends=scaleio	
-default_volume_type=thin
+enabled_backends=scaleio, unity	
+default_volume_type=ScaleIO_Thin
 
 [database]
 connection = mysql+pymysql://cinder:Password123!@ubuntu1/cinder
@@ -38,9 +38,7 @@ password = Password123!
 [oslo_concurrency]
 lock_path = /var/lib/cinder/tmp
 
-[ScaleIO]
-volume_driver=cinder.volume.drivers.emc.scaleio.ScaleIODriver
-volume_backend_name=scaleio
+[scaleio]
 san_ip = ubuntu1
 sio_protection_domain_name = ScaleIO@labbuildr
 sio_storage_pool_name = SP_labbuildr
@@ -48,3 +46,14 @@ sio_storage_pools = ScaleIO@labbuildr:SP_labbuildr
 san_login = admin
 san_password = Password123!
 san_thin_provision = true
+volume_driver=cinder.volume.drivers.emc.scaleio.ScaleIODriver
+volume_backend_name=scaleio
+
+[unity]
+storage_protocol = iSCSI
+storage_pool_names = vPool #Variable def. vPool
+unity_ip = 192.168.2.171 #variable def. 192.168.2.171
+san_login = Local/admin
+san_password = Password123!
+volume_driver = cinder.volume.drivers.emc.emc_unity.EMCUnityDriver
+volume_backend_name = unity
