--- a/openstack/mitaka/Controller/configs/cinder.conf
+++ b/openstack/mitaka/Controller/configs/cinder.conf
@@ -14,7 +14,7 @@ auth_strategy = keystone
 my_ip = 192.168.2.203
 
 enabled_backends=scaleio	
-default_volume_type=thin
+default_volume_type=
 
 [database]
 connection = mysql+pymysql://cinder:Password123!@ubuntu3/cinder
@@ -37,13 +37,3 @@ password = Password123!
 [oslo_concurrency]
 lock_path = /var/lib/cinder/tmp
 
-[ScaleIO]
-volume_driver=cinder.volume.drivers.emc.scaleio.ScaleIODriver
-volume_backend_name=scaleio
-san_ip = ubuntu3
-sio_protection_domain_name = PD_labbuildr
-sio_storage_pool_name = SP_labbuildr
-sio_storage_pools = PD_labbuildr:SP_labbuildr
-san_login = admin
-san_password = Password123!
-san_thin_provision = true
