fixed cinder install for unity

--- a/openstack/ocata/Controller/configs/cinder.conf
+++ b/openstack/ocata/Controller/configs/cinder.conf
@@ -14,8 +14,8 @@ transport_url = rabbit://openstack:RABBIT_PASS@controller
 auth_strategy = keystone
 my_ip = 
 
-enabled_backends=scaleio	
-default_volume_type=
+enabled_backends = scaleio	
+default_volume_type = 
 
 [database]
 connection = mysql+pymysql://cinder:CINDER_DBPASS@controller/cinder
