--- a/openstack/ocata/Compute/configs/container-server.conf
+++ b/openstack/ocata/Compute/configs/container-server.conf
@@ -6,7 +6,7 @@ bind_port = 6201
 user = swift
 swift_dir = /etc/swift
 devices = /srv/node
-mount_check = true
+mount_check = True
 # disable_fallocate = false
 #
 # Use an integer to override the number of pre-forked processes that will
