--- a/openstack/ocata/Compute/configs/object-server.conf
+++ b/openstack/ocata/Compute/configs/object-server.conf
@@ -6,7 +6,7 @@ bind_port = 6200
 user = swift
 swift_dir = /etc/swift
 devices = /srv/node
-mount_check = true
+mount_check = True
 # disable_fallocate = false
 # expiring_objects_container_divisor = 86400
 # expiring_objects_account_name = expiring_objects
