--- a/openstack/ocata/Compute/configs/swift.conf
+++ b/openstack/ocata/Compute/configs/swift.conf
@@ -6,8 +6,8 @@
 # once a cluster has been deployed.
 # Use only printable chars (python -c "import string; print(string.printable)")
 
-swift_hash_path_suffix = changeme
-swift_hash_path_prefix = changeme
+swift_hash_path_suffix = Password123!
+swift_hash_path_prefix = Password123!
 
 # storage policies are defined here and determine various characteristics
 # about how objects are stored and treated.  Policies are specified by name on
